--- a/app/views/about/us.html.erb
+++ b/app/views/about/us.html.erb
@@ -7,24 +7,38 @@
 
 <h1><%= I18n.t(:about_us) %></h1>
 
-О ТДФ
-Точкой отсчета в деятельности Тюменского дома фотографии можно с уверенностью считать 21 августа 2012 года, когда Тюменская областная организация Союза фотохудожников России, Арт-проект «Naked ambient», Клуб любителей фотографии «ФотоРегион» и «Гильдия фотографов» в Отеле Best Western Plus «Спасская» провела пресс-конференцию для СМИ,  представителей органов власти и общественных организаций. Тема встречи – создание в городе музея фотографии и выставочного мультимедийного центра. 
-Полное наименование организации: АНО « Тюменский дом-музей фотографии. Выставочный мультимедиа центр». Собственно, наименования подразделений сами говорят об основной деятельности. Единственно хотелось бы отметить, что мультимедиа центр – это не дань моде, а принципиальный подход. В условиях развития фиксации изображения цифровыми и другими оригинальными методами, необходимо в рамках экспозиций демонстрировать не только классическое фото творчество, но и другие современные формы визуального искусства.
+<h3>О ТДФ</h3>
+
+<p>Точкой отсчета в деятельности Тюменского дома фотографии можно с уверенностью считать 21 августа 2012 года, когда Тюменская областная организация Союза фотохудожников России, Арт-проект «Naked ambient», Клуб любителей фотографии «ФотоРегион» и «Гильдия фотографов» в Отеле Best Western Plus «Спасская» провела пресс-конференцию для СМИ,  представителей органов власти и общественных организаций. Тема встречи – создание в городе музея фотографии и выставочного мультимедийного центра. 
+</p>
+
+<p>Полное наименование организации: АНО « Тюменский дом-музей фотографии. Выставочный мультимедиа центр». Собственно, наименования подразделений сами говорят об основной деятельности. Единственно хотелось бы отметить, что мультимедиа центр – это не дань моде, а принципиальный подход. В условиях развития фиксации изображения цифровыми и другими оригинальными методами, необходимо в рамках экспозиций демонстрировать не только классическое фото творчество, но и другие современные формы визуального искусства.
 Безусловно, в одночасье столь масштабные проекты не реализуются. Полностью все подразделения Тюменского дома фотографии должны быть созданы и приступить к работе во II квартале 2013 года. Среди них школа фотографии для любителей разных возрастов и уровней, фотостудия, центр фотоуслуг, конференц-зал. О деятельности отделов, мы будем информировать Вас по мере их введения в строй, равно как и о том, кто работает над этим проектом и других новостях.
 Однако уже сейчас мы рады представить Вашему вниманию актуальную информацию и пригласить к сотрудничеству. Добро пожаловать в Тюменский дом фотографии!
+</p>
 
+<p>
 Исторические предпосылки создания «Тюменского дома-музея фотографии. Выставочного мультимедиа центра» (далее Дом фотографии).
 
 
      Фотодело в Тюменской области имеет давнюю историю. Примерно 150 лет назад в Тобольской губернии было открыто одно из первых в Российской империи фотоателье. По данным историков, находилось оно в Тюмени — в доме купца С.И. Некрасова, где располагались и торговые лавки. Сейчас этот памятник культуры находится по адресу Республики, 31. Полностью дом был достроен в 1885 году, но первый этаж здания был построен в 1862 году. Именно здесь камышловским мещанином Ф.С. Соколовым было 
 открыто одно из первых (если не первое) в Тюмени фотоателье. 
+</p>
+<p>
      Фотолетопись Тюмени началась с 1867(66?) года, когда учитель К. Н. Высоцкий  открыл свою фотографию и стал печатать открытки с видами города. Константин Николаевич Высоцкий (1835-1886) – также основатель первой типографии в Тюмени и литературного кружка, издатель первой частной газеты «Сибирский листок объявлений»; он печатал книги, справочники, лоцманские карты, уставы различных обществ. Его пустующий ныне дом располагается по ул. Ленина 10. Началом популяризации в России фотооткрыток с видами города принято считать 1890 – 1895 гг. Основными законодателями моды были Санкт- Петербург и Москва. Однако К.Н. Высоцкий еще в 1971 году на Промышленной выставке в Тюмени представил великолепный альбом с видами Тюмени, за что и получил похвальный лист от Министерства финансов.
+</p>
+<p>
       Кроме того, у тюменских фотографов имеются обширные коллекции – как фотоснимков, дагерротипов так и раритетных фотопринадлежностей: старинных фотоаппаратов и пленок. Самому старому фотоаппарату, который имеется в коллекции тюменского фотографа Игоря Ковалева, 109 лет! Это немецкий аппарат фирмы Ernemann, раритетная вещь, но он – в рабочем состоянии, как и еще около 20 уникальных пленочных фотоаппаратов с богатой историей. В том числе – «Зоркий-4», Rollei с объективом Schneider-Kreuznach Xenar 75/3.5 и другие. Не менее богатой подборкой старинных фотоаппаратов располагает другой известный тюменский фотограф Олег Орлов. В его антикварной коллекции есть не менее
-редкие экземпляры.       
+редкие экземпляры.     
+</p>
+<p>
      Если говорить о фотоархивах и редких фотографиях, то их в Тюменской области – в музеях и частных коллекциях – очень много. Есть фотографии Григория Распутина, сделанные в период, когда он проходил лечение в тюменской больнице. Есть фотоархив семьи Менделеевых, есть даже снимки царской семьи, сделанные в Тобольске. Есть и раздобытая ишимскими краеведами уникальная фотография Петра Ершова – другой такой нет ни в одном другом регионе: все довольствуются только рисованными портретами автора «Конька-Горбунка». Кстати, ученик Д.И. Менделеева С.М. Прокудин-Горский, который изобрел один из первых способов получения цветной фотографии, оставил уникальные снимки Тобольска и Тюмени конца XIX – начала ХХ века. Оцифрованная версия его работ находится в библиотеке Конгресса США. В Тюмени имеется значительная часть оригиналов. Имеющиеся раритетные фотоснимки выставляются в лучшем случае раз в несколько лет.
+     </p>  
+     <p>
      
      Помимо раритетных фотографий, сделанных в имперские времена, есть и кадры советской эпохи, благодаря которым можно проследить, как развивалась Тюмень, превращаясь из уездного города в столицу нефтегазоносного региона. Вместе с тем, огромное количество снимков, дагерротипов, негативов удалось сохранить только благодаря энтузиазму коллекционеров и просто частных лиц, так как были чудом спасены от уничтожения. Местонахождение части архивных материалов по-прежнему неизвестно. Имеющиеся раритетные фотоснимки выставляются в лучшем случае раз в несколько лет, притом в очень ограниченном количестве.
-
+</p>
+<p>
 В данном обзоре приведен далеко не полный перечень исторических данных и фактов.
 
 Подготовлено с использованием материалов:
@@ -34,38 +48,52 @@
 Gorod.72.info
 клуба «ФотоРегион»
 периодических СМИ г. Тюмени
-
+</p>
+<p>
 
 Актуальность создания «Тюменского дома-музея фотографии. Выставочного мультимедиа центра» (далее Дом фотографии).
-
+</p>
+<p>
 
      Сильные фотографы в нашем городе были всегда. Достаточно вспомнить прославленный фотоклуб «Тюмень», объединивший энтузиастов фотографии. Клуб не смог пережить тяжелые 90-е годы. Возрождение массового интереса к фотографическому искусству началось с появлением новых, цифровых технологий. 
+</p>
+<p>
      Так, например, в 2004 году на базе одноименного интернет-сайта был организован клуб «ФотоРегион» и объединил собой как профессиональных фотографов, так и любителей. С самых первых дней члены клуба активно участвуют в российских и международных конкурсах, устраиваются мастер-классы ведущих российских фотографов, каждую неделю проводятся бесплатные лекции с привлечением мастеров фотографии, художников, философов, искусствоведов. Клуб на регулярной основе проводит экспресс-фотоконкурс «Фотофиниш», когда получение задания, съемка и подведение итогов проходит в один день. На данный момент 07.10.12 проведен юбилейный 50-й конкурс, широко освещенный в СМИ. 
      Результаты не заставили себя ждать – начиная с 2007 года члены клуба «ФотоРегион» завоевали десятки призовых мест на российских и международных фотоконкурсах, в том числе – самых престижных. В частности 
 Николай Сульженко и Александр Романов обладатели высших фотографических наград – золотых медалей FIAP (Международная федерация фотоискусства), 
 Павел Анущенко – член UPI (United Photographers International, штаб-квартира Брюссель), почетный член HONPESGSPC (почётный член Кипрского фотосоюза). Медали: FIAP от 2009, выставка «Берега» - 2009.
+</p>
+<p>
 Клуб «ФотоРегион» три года подряд 2009-2012 гг. получает Золотую медаль за клубную коллекцию крупнейшего европейского фото-контеста Триренберг Супер-Циркуит. 
 Игорь Ковалев – единственный российский фотограф, завоевавший Кубок Международного Олимпийского Комитета с монограммой председателя Комитета Жака Рогге. 
 И многие другие.
+</p>
+<p>
      За счет наиболее подготовленных фотографов клуба пополняется Тюменская областная организация Союза фотохудожников России, количество членов которой за последние два года увеличилось до 11 человек. На регулярной основе в этом клубе занимается около 50 человек, и выражают желание заниматься еще около 300 человек. В электронной базе данных любителей фотографии, созданной клубом около 5 000 человек. Стоит ли подчеркивать, что фотография – самое массовое увлечение у современного горожанина; фотокамера имеется практически в каждом доме, в каждой семье.
      Напомним, что вся работа осуществляется безвозмездно.
+     </p>
+     <p>
      
      Таким образом, можно с уверенностью говорить о том, что фотографическое искусство в нашем городе является и массовым, и на достаточно высоком профессиональном уровне и дальнейшее движение тормозит только отсутствие постоянных выставочных площадей и помещения для проведения образовательных программ. Более того, имеются прецеденты отмены уже запланированных мероприятий, причем авторитетных мастеров и за собственные средства. 
      Создание Тюменского Дома фотографии также позволит решить вопрос поиска и развития местных талантов. К примеру, так это делается в Московском Доме фотографии (МДФ), существующем при правительстве Москвы, с его известной на всю Россию школой фотографии и мультимедиа центром имени Александра Родченко. МДФ расположен в перестроенном и оснащенном под экспозиционно-образовательные цели историческом здании в центре Москвы на улице Остоженка. Еще одним примером государственной поддержки служит Екатеринбургский Дом Метенкова, объединивший в себе функции музея фотографии, экспозиционно-выставочных площадей и фото-школы (перечень подразделений Тюменского Дома фотографии см. в Приложении 2).
+     </p>
+     <p>
      Городу и области для дальнейшего развития фотоискусства нужен Дом фотографии, это бесспорный факт. На его базе должны устраиваться постоянные экспозиции российских и зарубежных фотографов с мировым именем, благо, давно налаженные связи и заработанный авторитет это позволяет. Но самое важное – показать своих, тюменских авторов, творчеством которых любуются на выставках в Европе, Южной и Северной Америке, Азии и Австралии, но не видят в собственном городе. Также на базе Дома фотографии планируется создать сильнейшую по составу преподавателей фото-школу, объединив мастеров и преподавателей всех действующих фото-школ в городе и, по возможности, всей Тюменской области.
+</p>
+<p>
+     Как минимум вышеперечисленные данные говорят о необходимости создания Тюменского Дома фотографии.
+</p>
+<p>
 
-     Как минимум вышеперечисленные данные говорят о необходимости создания Тюменского Дома фотографии (предложения по объектам в Приложении 3).
-Подготовлено 
-Тюменской областной организацией 
-Союза фотохудожников России
-
-
-Про Музей  
-
+<h3>Про Музей</h3>
+<p>
 В настоящий момент решается вопрос об адресе, по которому будет находиться музей. Составляется перечень имеющихся экспонатов, ведутся переговоры с коллекционерами и просто жителями Тюмени, области, других городов и даже с заграничными партнерами. Согласно плану развития, музей должен открыться, по крайней мере, первая его экспозиция, во втором квартале 2015 года. По вопросам сотрудничества с музеем – передача экспонатов, выставочный план, трудоустройство, просьба обращаться по тф.
 +7 3452 99 87 55 или пишите fotoexpo72@mail.ru.
 Советом учредителей было предложено присвоить имя К. Н. Высоцкого. В настоящий момент проходят необходимые организационные мероприятия.
+</p>
+<p>
 Вашему вниманию предлагается краткая историческая справка.
 
-Высоцкий Константин Николаевич 
-     Константин Николаевич Высоцкий, тюменский учитель. Ему принадлежала первая в городе фотомастерская и литография. Им была организована первая типография в Тюмени в 1857 году.       Константином Николаевичем Высоцкий - сын польского революционера, высланного в Сибирь за участие в восстании 1831 года. Высоцкий был учителем Тюменского уездного училища (в настоящее время там находится здание Строительной академии). Типография же находилась на нынешней ул. Ленина, наискосок от польского костёла.      В 1879г. он начал выпускать первую в городе газету "Сибирский листок объявлений". Все крупные типографии возникали, как фабричные предприятия. К первым таким предприятиям принадлежали открытые в 1887 году в Тюмени типографии дочери коллежского асессора Л.К. Высоцкой и ялуторовского мещанина Г.И. Житкова. Количество рабочих на каждой из них достигало десяти. Чистый доход в 1890 году составил у Л.К. Высоцкой - 500 рублей, у Г.И. Житкова – 1250 рублей. Сын К.Н. Высоцкого - Николай Высоцкий – выдающийся русский геолог с мировой известностью, первооткрыватель минерала платиново-палладиевой группы, который назван его именем – «выцоскит». Внук К.Н. Высоцкого – В.В. Князев – известный советский поэт и писатель, был репрессирован в 1937г. 
+<h4>Высоцкий Константин Николаевич </h4>
+     Константин Николаевич Высоцкий, тюменский учитель. Ему принадлежала первая в городе фотомастерская и литография. Им была организована первая типография в Тюмени в 1857 году. Константином Николаевичем Высоцкий - сын польского революционера, высланного в Сибирь за участие в восстании 1831 года. Высоцкий был учителем Тюменского уездного училища (в настоящее время там находится здание Строительной академии). Типография же находилась на нынешней ул. Ленина, наискосок от польского костёла.  В 1879г. он начал выпускать первую в городе газету "Сибирский листок объявлений". Все крупные типографии возникали, как фабричные предприятия. К первым таким предприятиям принадлежали открытые в 1887 году в Тюмени типографии дочери коллежского асессора Л.К. Высоцкой и ялуторовского мещанина Г.И. Житкова. Количество рабочих на каждой из них достигало десяти. Чистый доход в 1890 году составил у Л.К. Высоцкой - 500 рублей, у Г.И. Житкова – 1250 рублей. Сын К.Н. Высоцкого - Николай Высоцкий – выдающийся русский геолог с мировой известностью, первооткрыватель минерала платиново-палладиевой группы, который назван его именем – «выцоскит». Внук К.Н. Высоцкого – В.В. Князев – известный советский поэт и писатель, был репрессирован в 1937г. 
+</p>
