Change link color for incoming_mail_alert

--- a/app/views/layouts/_messages.html.erb
+++ b/app/views/layouts/_messages.html.erb
@@ -12,6 +12,6 @@
 <%- if incoming_mail_alert %>
 <div class="alert alert-warning alert-dismissible letter-alert" style="display: none" role="alert">
   <button type="button" class="close" data-dismiss="alert"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
-  <span><%= incoming_mail_alert %></span>
+  <h3><%= incoming_mail_alert %></h3>
 </div>
 <%- end %>
