--- a/app/assets/stylesheets/user.css.scss
+++ b/app/assets/stylesheets/user.css.scss
@@ -1,3 +1,7 @@
 // Place all the styles related to the UserCloud controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.letter-alert-link {
+  color: rgb(0,0,255);
+}
