Migrated to Mailboxer gem

--- a/app/views/admin/user_letter_senders/_form.html.erb
+++ b/app/views/admin/user_letter_senders/_form.html.erb
@@ -13,7 +13,7 @@
       <div class="modal-body">
          
 
-        <%= render partial: 'letters/admin_form', locals: {from_user: from_user, to_user: to_user, letter: letter} %>
+        <%= render partial: 'conversations/admin_form', locals: {from_user: from_user, to_user: to_user, letter: letter} %>
 
       </div>
       <div class="modal-footer">
