--- a/app/views/admin/request_forms/show.html.erb
+++ b/app/views/admin/request_forms/show.html.erb
@@ -8,7 +8,9 @@
     <th>Дата</th>
     <th>Решение</th>
     <th>Количество номинаций</th>  
-    <th>Примечания</th>  
+    <th class="small">Почта</th>  
+    <th class="small">Телефон</th>  
+    <th class="small">Примечания</th>  
   </tr>
 
   <%- @competition_requests.each do |request| %>
@@ -19,6 +21,8 @@
       <td><%= ld request.created_at %></td>
       <td><%= request.decision %>  </td>
       <td><%= request.permited_nomination_count %></td>  
+      <td class="small"><%= request.user.email %></td>
+      <td class="small"><%= request.user.phone %></td>
       <td></td>
     </tr>
 
