Поменял сортировку заявок в печатной форме

--- a/app/views/admin/request_forms/show.html.erb
+++ b/app/views/admin/request_forms/show.html.erb
@@ -20,7 +20,7 @@
       <td><%= request.user.country_name %></td>
       <td><%= ld request.created_at %></td>
       <td><%= request.decision %>  </td>
-      <td><%= request.permited_nomination_count %></td>  
+      <td><%= request.nomination_count %></td>  
       <td class="small"><%= request.user.email %></td>
       <td class="small"><%= request.user.phone %></td>
       <td></td>
