Добавил пояснения к иконке результатов

--- a/app/views/competitions/index.html.erb
+++ b/app/views/competitions/index.html.erb
@@ -64,7 +64,8 @@
 
 <sup><%= t('hints') %></sup>
 <p class="small">
-  
+<%= horn_icon %> : <%= t('competition_results') %>
+<br>  
 <%= show_icon %> : <%= t('competition_info') %>
 <br> 
 <%= photo_icon %> : <%= t('competition_photos') %>
