--- a/app/views/admin/settings/_form.html.erb
+++ b/app/views/admin/settings/_form.html.erb
@@ -1,6 +1,9 @@
 <%= simple_form_for(@admin_setting) do |f| %>
   <%= f.error_notification %>
     
+    
+    <%= f.label t('show_main_header') %>
+    <%= f.input :show_main_header, :label => false, :item_wrapper_class => 'inline' %>
 
     <div class="form-group">
     <%= f.association :album,:input_html => {class: "form-control"} %>
@@ -25,11 +28,14 @@
    <div class="form-group">
     <%= f.input :footer,:input_html => {class: "form-control"} %>
    </div>
-                
+
     <div class="form-group">
     <%= f.file_field :adult_image,:input_html => {class: "form-control"} %>
     </div>
   
+    
+    
+   
 
     <%= f.button :submit, value: t('save'),input_html: {class: "btn btn-default"} %>
   
