--- a/app/views/home/index.html.slim
+++ b/app/views/home/index.html.slim
@@ -2,17 +2,21 @@
     description: "Тюменский дом фотографии",
     keywords: %w(Тюмень фотография дом фотоискусство фотоклуб)
  
- - meta og: { image: asset_url('logo1.jpg'), title: "Тюменский дом Фотографии", url: root_url }
+- meta og: { image: asset_url('logo1.jpg'), title: "Тюменский дом Фотографии", url: root_url }
 
 - if @setting_decorator.album 
-  h3
-    = t(:tdp_presents) 
+
+  - if @setting_decorator.show_main_header
+    h3
+      = t(:tdp_presents) 
+
     br
     = link_to elki(@setting_decorator.album_title), album_path(@setting_decorator.album) if @setting_decorator.album 
-  small 
-    = author_label(@setting_decorator.album) 
-    | : 
-    = @setting_decorator.authors if @setting_decorator.album && @setting_decorator.album.authors 
+    |&nbsp;
+    small 
+      = author_label(@setting_decorator.album) 
+      | : 
+      = @setting_decorator.authors if @setting_decorator.album && @setting_decorator.album.authors 
 
 div style="clear:both" 
 hr
