--- a/app/views/author/index.html.slim
+++ b/app/views/author/index.html.slim
@@ -1,16 +1,31 @@
-- breadcrumb :authors 
+- breadcrumb :authors
 
-h1 = t("authors")
+h1 
+  = t("authors")
+  small
+    sup
+      |*
 
-= will_paginate @users
 
-.row
-  .col-md-12
-    .row
-    - @users.each do |user|
-      .col-md-2
-        .thumbnail
-          = link_to image_tag(user.face), user_profile_path(user), class: 'thumbnail'
-          .caption
-            = user.full_name
+ul class="list-unstyled"
+  - @users.each do |user| 
+
+    li style = ("padding-bottom: 3px")
+      = image_tag(user.face, class: "img-rounded")
+      |&nbsp;
+      = link_to user.full_name,user_profile_path(user)
+  
+br
+br
+br
+br
+
+
+
+
+
+
+small
+  |*
+  = t('authors_description')
             
