--- a/app/assets/stylesheets/author.css.scss
+++ b/app/assets/stylesheets/author.css.scss
@@ -1,3 +1,16 @@
-// Place all the styles related to the author controller here.
+// Place all the styles related to the ajax controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+
+.author-image {
+  
+  height: 50px;
+  text-align: left;
+
+
+}
+
+.user_box {
+  margin: 5px;
+}
