--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -16,6 +16,7 @@
       <th><%= t('role') %></th>
       <th></th>
       <th></th>
+      <th></th>
     </tr>
   </thead>
   <tbody>
@@ -37,6 +38,10 @@
         <%= render user %>
       </td>
       <td><%= link_to("Delete user", user_path(user), :data => { :confirm => "Are you sure?" }, :method => :delete, :class => 'btn btn-mini') unless user == current_user %></td>
+      <td>
+        <%= link_to "Маскировка", new_user_masquerade_path(user), class: 'btn btn-mini' %>
+      </td>
+
     </tr>
   <% end %>
   </tbody>
