--- a/app/views/admin/stats/index.html.erb
+++ b/app/views/admin/stats/index.html.erb
@@ -36,6 +36,10 @@
         <td>Количество заявок на активные конкурсы ожидающие решения</td>
         <td><%= @stats.active_waiting_competition_requests %></td>
     </tr>
+    <tr>
+        <td>Количество принятых заявок на активные конкурсы</td>
+        <td><%= @stats.active_accepted_competition_requests %></td>
+    </tr>
   
     <tr>
         <td>Количество фотографий на открытые конкурсы</td>
