--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -69,11 +69,11 @@
   <%= f.input :current_password, :hint => I18n.t('we_need_your_current_password'), :required => true, :input_html => {class: "form-control"}  %>
   </div>
 
-  <%= f.button :submit, 'Update', :class => 'btn-primary' %>
+  <%= f.button :submit, t('update'), :class => 'btn-primary' %>
 <% end %>
-<h3>Cancel my account</h3>
-<p>Unhappy? <%= link_to I18n.t('cancel_account'), registration_path(resource_name), :data => { :confirm => "Are you sure?" }, :method => :delete %>.</p>
-<%= link_to "Back", :back %>
+<h3><%= t('cancel_account') %></h3>
+<p> <%= t('unhappy') %> <%= link_to I18n.t('cancel_account'), registration_path(resource_name), :data => { :confirm => "Are you sure?" }, :method => :delete %>.</p>
+<%= link_to t('back'), :back %>
 
 
 <script>
