Add user full name to admin/ticket

--- a/app/views/admin/messages/show.html.erb
+++ b/app/views/admin/messages/show.html.erb
@@ -1,4 +1,10 @@
 <p>
+  <strong><%= t('from') %>:</strong>
+  <%= @message.user.full_name %>
+
+</p>
+
+<p>
   <strong><%= t(".title") %>:</strong>
   <%= @message.title %>
 </p>
