--- a/app/views/admin/messages/index.html.erb
+++ b/app/views/admin/messages/index.html.erb
@@ -4,6 +4,7 @@
   <thead>
     <tr >
       <th class="span2">Title</th>
+      <th><%= t('from') %></th>
       <th><%=  t(".content")%></th>
       
       <th><%= t(".status") %></th>
@@ -18,6 +19,7 @@
     <% @messages.each do |message| %>
       <tr>
         <td><%= message.title %></td>
+        <td><%= link_to message.full_name, user_profile_path(message.user) %></td>
         <td><%= message.content %></td>
         <td><%= content_tag(:span,message.status_text,class: status_class(message)) %></td>
         <td><%= message.reason_text %></td>
