--- a/app/views/admin/competition_requests/_filter_form.html.erb
+++ b/app/views/admin/competition_requests/_filter_form.html.erb
@@ -3,16 +3,7 @@
 
 
     <div class="form-group">
-    <%= f.input :response_id, 
-        label: t('choose_response'),
-        collection: CompetitionRequest::RESPONSES,
-        label_method: CompetitionRequest::LABEL,
-        value_method: CompetitionRequest::VALUE,
-        input_html: { class: "form-control" },
-        selected: @response_id,
-        include_blank: "Все"
-    %>
-
+        <%= f.input :response_id, collection: CompetitionRequest.response_ids_i18n.invert %>
     </div>
     
     
