Add link to back inside jury show photo

--- a/app/views/jury/_nomination_form.html.erb
+++ b/app/views/jury/_nomination_form.html.erb
@@ -1,4 +1,4 @@
-<%= simple_form_for(:jury, url: jury_view_photos_path(@competition, @scope), method: :get) do |f| %>
+<%= simple_form_for(:nominations, url: jury_view_photos_path(@competition, @scope), method: :get) do |f| %>
   <%= f.error_notification %>
 
 
