--- a/app/views/jury/show.html.erb
+++ b/app/views/jury/show.html.erb
@@ -16,10 +16,12 @@
 
 <%- end %>
 
+<%= link_to "#{t('back')} (#{t(@scope)})", jury_view_photos_path(@competition_photo.competition, @scope, @nomination_id) %>
+
 
 <div style="float: right">
-  <%= link_to backward_icon, jury_show_path(@prev) if @prev %>
-  <%= link_to forward_icon, jury_show_path(@next) if @next %>
+  <%= link_to backward_icon, jury_show_path(@scope, @prev, @nomination_id) if @prev %>
+  <%= link_to forward_icon, jury_show_path(@scope, @next, @nomination_id) if @next %>
 </div>
 
 <%= jury_rate(current_user.id, @competition_photo.id, @competition_photo.jury_rating(@user.id), "jury_rate",@competition_photo.competition.num_stars) %>
