--- a/app/views/jury/view_photos.html.erb
+++ b/app/views/jury/view_photos.html.erb
@@ -23,7 +23,7 @@
 <table class="table table-striped">
   
   <tr>
-    <td><%= t('photos') %></td>
+    <td><%= t('photos_') %></td>
     <td><%= t('nomination') %></td>
     <td><%= t('rating') %></td>
   </tr>
