--- a/app/views/jury/view_photos.html.erb
+++ b/app/views/jury/view_photos.html.erb
@@ -24,7 +24,7 @@
   
   <tr>
     <td><%= t('photos_') %></td>
-    <td><%= t('nomination') %></td>
+    <td><%= t('nomination_') %></td>
     <td><%= t('rating') %></td>
   </tr>
 
