--- a/app/views/competitions/index.html.erb
+++ b/app/views/competitions/index.html.erb
@@ -1,4 +1,4 @@
-<% meta title: "Тюменский дом фотографии",
+<% meta title: "Тюменский дом фотографии: Конкурсы",
      description: "Конкурсы тюменского дома фотографии",
      keywords: %w(конкурсы фотография Тюмень)
 %>
