--- a/app/views/admin/competitions/_form.html.erb
+++ b/app/views/admin/competitions/_form.html.erb
@@ -36,6 +36,11 @@
     :input_html => {class: "form-control"}%>
     </div>
 
+    <div class="form-group">
+    <%= f.input :jury_closed %>
+    </div>
+
+
 
 
     <%= f.button :submit, value: t('save'),input_html: {class: "btn btn-default"} %>
