--- a/app/views/admin/competitions/_form.html.erb
+++ b/app/views/admin/competitions/_form.html.erb
@@ -19,6 +19,11 @@
     </div>
 
     <div class="form-group">
+    <%= f.input :jury_date %>
+    </div>
+    
+
+    <div class="form-group">
     <%= f.input :num_stars, input_html: { value: @competition.num_stars ? @competition.num_stars : 10 } %>
     </div>
 
@@ -36,10 +41,7 @@
     :input_html => {class: "form-control"}%>
     </div>
 
-    <div class="form-group">
-    <%= f.input :jury_closed %>
-    </div>
-
+    
 
 
 
