--- a/app/views/admin/competitions/index.html.erb
+++ b/app/views/admin/competitions/index.html.erb
@@ -7,6 +7,7 @@
       <th><%= t(".type") %></th>
       <th><%= t(".accept_date") %></th>
       <th><%= t(".last_date") %></th>
+      <th><%= t(".jury_date") %></th>
       <th><%= t(".open_date") %></th>
       <th></th>
       <% if current_user.has_role?("admin") %>
@@ -27,6 +28,7 @@
         <td><%= competition.open? ? green_label(t("open")) : red_label(t("private")) %></td>
         <td><%= ld competition.accept_date %></td>
         <td><%= ld competition.last_date %></td>
+        <td><%= ld competition.jury_date %></td>
         <td><%= content_tag(:span,ld(competition.open_date),class: competition_class(competition)) %></td>
         <td><%= link_to(list_icon, stats_admin_competition_path(competition),:title =>"Статистика") %></td>
 
