--- a/app/views/admin/competitions/_form.html.erb
+++ b/app/views/admin/competitions/_form.html.erb
@@ -32,13 +32,11 @@
     </div>
  
     <div class="form-group">
-    <%= f.input :type_id,collection: Competition::TYPES, label_method: Competition::LABEL, value_method: Competition::VALUE,
-    :input_html => {class: "form-control"}%>
+    <%= f.input :type_id, :input_html => {class: "form-control"}%>
     </div>
 
     <div class="form-group">
-    <%= f.input :status_id,collection: Competition::STATUSES, label_method: Competition::LABEL, value_method: Competition::VALUE,
-    :input_html => {class: "form-control"}%>
+    <%= f.input :status_id, :input_html => {class: "form-control"}%>
     </div>
 
     
